# cowprojectifg

./: README.md  pyproject.toml  relatorio_analise_features.md  requirements.txt  run_app.sh  zip_project.sh
Key_points_1/: 102  103  104  106  108  109  110  111  112  113  116  117  118  121  129  130  131  132  90  92  93  94  95  96  99
Key_points_2/: 133  134  135  136  137  138  139  140  141  142  143  144  145  146  147  148  149  150  151  152  153  154  155  156  157  158  159  160  161  162  163  164  165  166  167  168  169  170  171  172  (+4 more)
key_points_1/Key_points/: 100  101  105  107  114  115  119  120  122  123  124  125  126  127  128  89  91  97  98
src/: refactor.py
src/data/: prepare_classification_dataset.py
src/features/: build_features.py  eda_features.py  extract_geometric_features.py  generate_geometric_features_from_dataset.py
src/models/: predict_keypoints_from_image.py  save_metrics.py  train_random_forest.py
src/train_yolo/: convert_labels_to_yolo_pose.py  prepare_dataset.py  train_yolo_kfold.py
src/ui/: README.md  __init__.py  app.py  config.py  helpers.py
src/utils/: geometry_func.py
